leptos-fluent-macros/tests/ui/leptos_fluent/stable/fail/empty_parameter.stderr
error: Expected expression with `key: value`, `#[...] key: value`, `key,` or `#[...] key,` format. Found:
       : "foo",
  --> tests/ui/leptos_fluent/stable/fail/empty_parameter.rs:18:9
   |
18 |         : "foo",
   |         ^
